--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.8.0",
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1"
   },
